--- a/src/resources/add_dialog.ui
+++ b/src/resources/add_dialog.ui
@@ -81,9 +81,17 @@
               </packing>
             </child>
             <child>
-              <object class="GtkComboBox">
+              <object class="GtkComboBox" id="recordTypeComboBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="active">1</property>
+                <property name="has_entry">True</property>
+                <property name="id_column">0</property>
+                <child internal-child="entry">
+                  <object class="GtkEntry">
+                    <property name="can_focus">False</property>
+                  </object>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -116,7 +124,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkEntry">
+                      <object class="GtkEntry" id="valueEntry">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="input_purpose">number</property>
@@ -156,7 +164,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkEntry">
+                      <object class="GtkEntry" id="unitsEntry">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                       </object>
@@ -196,7 +204,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkCalendar">
+              <object class="GtkCalendar" id="dateCalendar">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="margin_left">5</property>
